--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
 <body>
   <h1>twentyfourteens</h2>
-  <p>take my life
-and dye it
-mint green
-like Bethany Mota’s
-blood
-soft and oversaturated
-like cotton candy
-hey guys!!!!!!!!
-welcome back to my channel
-today we’re going to be doing something a 
-l i t t le diff e re n t
-her voice fades into ukulele   stock 	music
-
-close my eyes
-and take me
-to that
-azure sky
-where two clouds
+  <p>take my life<br>
+and dye it<br>
+mint green<br>
+like Bethany Mota’s<br>
+blood<br>
+soft and oversaturated<br>
+like cotton candy<br>
+hey guys!!!!!!!!<br>
+welcome back to my channel<br>
+today we’re going to be doing something a <br>
+l i t t le diff e re n t<br>
+her voice fades into ukulele   stock 	music<br>
+<br>
+close my eyes<br>
+and take me<br>
+to that<br>
+azure sky<br>
+where two clouds<br>
 		hover indefinitely
 i never actually read The Fault In Our Stars
 but the cover art alone
