--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>2014</title>
-	<link rel="stylesheet" href="/styles.css">
+	<link rel="stylesheet" href="/style.css">
 	<script src="/script.js"></script>
 </head>
 <body>
-  <h1>twentyfourteens</h2>
+  <h1>twentyfourteen</h2>
   <p>take my life<br>
 and dye it<br>
 mint green<br>
