--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="/script.js"></script>
 </head>
 <body>
+<center>
   <h1>twentyfourteen</h2>
   <p>take my life<br>
 and dye it<br>
@@ -144,4 +145,5 @@ teal            ocean 	sky
 gapes open
  fall through
   </p>
+	</center>
 </body>
