--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@ soft and oversaturated<br>
 like cotton candy<br>
 hey guys!!!!!!!!<br>
 welcome back to my channel<br>
-today we’re going to be doing something a <br>
+today we’re going to be doing something a
 l i t t le diff e re n t<br>
 her voice fades into ukulele   stock 	music<br>
-<br>
 close my eyes<br>
 and take me<br>
 to that<br>
