--- a/index.html
+++ b/index.html
@@ -28,121 +28,120 @@ and take me<br>
 to that<br>
 azure sky<br>
 where two clouds<br>
-		hover indefinitely
-i never actually read The Fault In Our Stars
-but the cover art alone
+		hover indefinitely<br>
+i never actually read The Fault In Our Stars<br>
+but the cover art alone<br>
 lost me
-in a terminal dream of An
-      sel Elgort
-	      nsterdam and prepubescent
-	      gnst
-okay?
-okay.
-	I've been a bad girl
-		Wash my mouth out
-		with bath and body
-works soap
-Here, if you buy three 
-and 
-I buy three 
-we can use the
-buy three 
-get three 
-free 
-deal 
+in a terminal dream of An<br>
+      sel Elgort<br>
+	      nsterdam and prepubescent<br>
+	      gnst<br>
+okay?<br>
+okay.<br>
+	I've been a bad girl<br>
+		Wash my mouth out<br>
+		with bath and body<br>
+works soap<br>
+Here, if you buy three <br>
+and <br>
+I buy three <br>
+we can use the<br>
+buy three <br>
+get three <br>
+free <br>
+deal <br>
 
-are you ready to check out?
-You never know how good 
-
-
-
-listerine
-mouth wash
+are you ready to check out?<br>
+You never know how good <br>
 
 
-pistachio ice cream
+
+listerine<br>
+mouth wash<br>
 
 
-		discover yourself
-on buzzfeed
-					Which disney princess are you?
+pistachio ice cream<br>
 
 
-download vsco
-V--S--C--O
-crop your photos with white borders so your
-		instagram				     feed
-		looks li ke  			                 t his		
+		discover yourself<br>
+on buzzfeed<br>
+
+download vsco<br>
+V--S--C--O<br>
+crop your photos with white borders so your<br>
+		instagram	<br>			     feed <br>
+		looks li ke  			        <br>         t his	<br>	
 		
 
-tumblr,
-have you heard of it?
-			oh, you haven’t?
-	better start designing your
-	blog page
-#  	9	8	F	F	9	8
-		and accidentally
-(learn
-			to 
-						code)
-YOU
-yes, you!!! 
-You need 
-to learn to code! 1 !	1 !
-	go to code.org to participate in this year’s
-	hour 		of 		code
-Haven’t you heard that 		Women  	    in STEM 
-are       	 the future ?
-		That’s the thing now.
+tumblr,<br>
+have you heard of it?<br>
+			oh, you haven’t?<br>
+	better start designing your<br>
+	blog page<br>
+#  	9	8	F	F	9	8<br>
+		and accidentally<br>
+(learn<br>
+			to <br>
+						code)<br>
+YOU<br>
+yes, you!!! <br>
+You need <br>
+to learn to code! 1 !	1 !<br>
+	go to code.org to participate in this year’s<br>
+	hour 		of 		code<br>
+Haven’t you heard that 		Women  	    in STEM <br>
+are       	 the future ?<br>
+		That’s the thing now.<br>
+<br><br>
+			didn’t you hear Malala’s speech??<br>
+Oh, ok<br>
+continue to <br>
+ask yourself<br>
+have i come of age?<br>
+is this over yet?<br>
 
-			didn’t you hear Malala’s speech??
-Oh, ok
-continue to 
-ask yourself
-have i come of age?
-is this over yet?
+i’m talking skater<br>
+skirts<br>
+Choker necklaces<br>
+asphyxiating you<br>
+white converse<br>
+when every youtuber<br>
+was<br>
+still<br>
+on vine<br>
+D.I.Y. this and<br>
+that<br>
 
-i’m talking skater
-skirts
-Choker necklaces
-asphyxiating you
-white converse
-when every youtuber
-was
-still
-on vine
-D.I.Y. this and
-that
-
-infinite scarfs
-which 
-even if you
-unraveled
-couldn’t span
-the distance
-betw e e n
-now
-and t h e n
-i want to dye
-it mint green 
-I want my life
-to be
-so 
-g od d amn
-ce rul ean
-your eyes burn when you look at me
-so aquamarine 
-i turn ill
-seafoam 
-froths 
-from my
-lips
-with delight
-None of its real
-all i know is
-teal            ocean 	sky 
-gapes open
- fall through
+infinite scarfs<br>
+which <br>
+even if you<br>
+unraveled<br>
+couldn’t span<br>
+the distance<br>
+betw e e n<br>
+now<br>
+and t h e n<br>
+i want to dye<br>
+it mint green <br>
+I want my life<br>
+to be<br>
+so <br>
+g od d amn<br>
+ce rul ean<br>
+your eyes burn when you look at me<br>
+so aquamarine <br>
+i turn ill<br>
+seafoam <br>
+froths <br>
+from my<br>
+lips<br>
+with delight<br>
+None of its real<br>
+all i know is<br>
+teal            ocean 	sky <br>
+gapes open<br>
+ fall through<br>
+	<div></div>
   </p>
 	</center>
 </body>
