--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 <body>
 <center>
-  <h1>twentyfourteen</h2>
-  <p>take my life<br>
+  <h1>twentyfourteen</h1>
+  <p>one time this guy asked me,<br>
+	  what's the first year you remember? <br> 
+	  and i was like <br>
+	 flourescence predates my memory
+	i need you to take my life<br>
 and dye it<br>
 mint green<br>
 like Bethany Mota’s<br>
