--- a/index.html
+++ b/index.html
@@ -9,43 +9,44 @@
 	<script src="/script.js"></script>
 </head>
 <body>
-<center>
-  <h1>twentyfourteen</h1>
-  <p>one time this guy asked me,<br>
-	  what's the first year you remember? <br> 
-	  and i was like <br>
-	 flourescence predates my memory
-	i need you to take my life<br>
+	<center>
+	
+  <h1>twentyfourteen</h1>  <p>
+	
+one time this guy asked me,<br>
+what's the first year you remember? <br> 
+and i was like <br>
+dude there is flourescent ball of blue light that predates my memory <br>
+that radiates and permeates and hesitates <br>
+from the centeral consule of my mind <br>
+i need you to take my life<br>
 and dye it<br>
 mint green<br>
 like Bethany Mota’s<br>
 blood<br>
-soft and oversaturated<br>
+soft and saccharine<br>
 like cotton candy<br>
-hey guys!!!!!!!!<br>
+hey guys! <br>
 welcome back to my channel<br>
-today we’re going to be doing something a
-l i t t le diff e re n t<br>
+today we’re going to be doing something a <br>
+l i t t le diff e re n t <br>
 her voice fades into ukulele   stock 	music<br>
-close my eyes<br>
-and take me<br>
-to that<br>
-azure sky<br>
+take me<br>
+to that brilliant<br>
+Azure Sky<br>
 where two clouds<br>
 		hover indefinitely<br>
 i never actually read The Fault In Our Stars<br>
 but the cover art alone<br>
 lost me
-in a terminal dream of An<br>
-      sel Elgort<br>
+in a terminal dream of Ansel Elgort<br>
 	      nsterdam and prepubescent<br>
 	      gnst<br>
 okay?<br>
 okay.<br>
-	I've been a bad girl<br>
-		Wash my mouth out<br>
-		with bath and body<br>
-works soap<br>
+I've been a bad girl<br>
+why don't you wash my mouth out<br>
+with Bath and Body Works soap<br>
 Here, if you buy three <br>
 and <br>
 I buy three <br>
@@ -57,9 +58,14 @@ deal <br>
 
 are you ready to check out?<br>
 You never know how good <br>
+oh wow
+oh no
+its really bad isn't it?
+		
+		yeah...
 
-
-
+the twittersphere
+		
 listerine<br>
 mouth wash<br>
 
@@ -67,15 +73,6 @@ mouth wash<br>
 pistachio ice cream<br>
 
 
-		discover yourself<br>
-on buzzfeed<br>
-
-download vsco<br>
-V--S--C--O<br>
-crop your photos with white borders so your<br>
-		instagram	<br>			     feed <br>
-		looks li ke  			        <br>         t his	<br>	
-		
 
 tumblr,<br>
 have you heard of it?<br>
@@ -98,13 +95,8 @@ are       	 the future ?<br>
 		That’s the thing now.<br>
 <br><br>
 			didn’t you hear Malala’s speech??<br>
-Oh, ok<br>
-continue to <br>
-ask yourself<br>
-have i come of age?<br>
-is this over yet?<br>
 
-i’m talking skater<br>
+skate in
 skirts<br>
 Choker necklaces<br>
 asphyxiating you<br>
