--- a/index.html
+++ b/index.html
@@ -9,33 +9,29 @@
 	<script src="/script.js"></script>
 </head>
 <body>
-	<center>
+<center>
 	
   <h1>twentyfourteen</h1>  <p>
-	
-one time this guy asked me,<br>
+one time this guy asked me<br>
 what's the first year you remember? <br> 
-and i was like <br>
-dude there is flourescent ball of blue light that predates my memory <br>
-that radiates and permeates and hesitates <br>
-from the centeral consule of my mind <br>
+and i was like there's<br>
+a flourescent ball of blue light that predates my memory <br>
+it radiates and permeates and hesitates <br>
+from center consule<br>
 i need you to take my life<br>
-and dye it<br>
-mint green<br>
-like Bethany Mota’s<br>
-blood<br>
-soft and saccharine<br>
+and dye it mint green<br>
+like Bethany Mota’s blood<br>
+saccharine and soft<br>
 like cotton candy<br>
 hey guys! <br>
 welcome back to my channel<br>
 today we’re going to be doing something a <br>
 l i t t le diff e re n t <br>
-her voice fades into ukulele   stock 	music<br>
-take me<br>
-to that brilliant<br>
+her voice fades into ukulele stock music<br>
+take me to the brilliant<br>
 Azure Sky<br>
 where two clouds<br>
-		hover indefinitely<br>
+hover indefinitely<br>
 i never actually read The Fault In Our Stars<br>
 but the cover art alone<br>
 lost me
@@ -128,14 +124,14 @@ your eyes burn when you look at me<br>
 so aquamarine <br>
 i turn ill<br>
 seafoam <br>
-froths <br>
-from my<br>
-lips<br>
+froths forth from <br>
+my lips<br>
 with delight<br>
-None of its real<br>
+none of its real<br>
 all i know is<br>
 teal            ocean 	sky <br>
 gapes open<br>
+	<div></div>
  fall through<br>
 	<div></div>
   </p>
