--- a/index.html
+++ b/index.html
@@ -15,26 +15,34 @@
 one time this guy asked me<br>
 what's the first year you remember? <br> 
 and i was like there's<br>
-a flourescent ball of blue light that predates my memory <br>
+a flourescent ball of blue light that predates memory <br>
 it radiates and permeates and hesitates <br>
-from center consule<br>
+from center consule it operates<br>
+surveilling everything i do<br>
+do you also suffer from this thing?<br>
+yeah i do he said<br>
+i know the glowing green orb in my head he said<br>
+so then i was like<br>
+can i ask you a favor? <br>
+he said sure<br>
 i need you to take my life<br>
 and dye it mint green<br>
 like Bethany Mota’s blood<br>
-saccharine and soft<br>
+overly saccharine and soft<br>
 like cotton candy<br>
 hey guys! <br>
 welcome back to my channel<br>
-today we’re going to be doing something a <br>
-l i t t le diff e re n t <br>
+today we’re going to be doing something a l i t t le diff e re n t<br>
 her voice fades into ukulele stock music<br>
-take me to the brilliant<br>
+it gets caught in the riptide<br>
+fly me to the brilliant<br>
 Azure Sky<br>
 where two clouds<br>
 hover indefinitely<br>
-i never actually read The Fault In Our Stars<br>
-but the cover art alone<br>
-lost me
+i never actually read The Fault In Our Stars to completion<br>
+but the cover art <br>
+	alone<br>
+lost me<br>
 in a terminal dream of Ansel Elgort<br>
 	      nsterdam and prepubescent<br>
 	      gnst<br>
@@ -94,8 +102,9 @@ are       	 the future ?<br>
 
 skate in
 skirts<br>
-Choker necklaces<br>
-asphyxiating you<br>
+
+asphyxiate me<br>
+with a choker necklace
 white converse<br>
 when every youtuber<br>
 was<br>
@@ -104,7 +113,7 @@ on vine<br>
 D.I.Y. this and<br>
 that<br>
 
-infinite scarfs<br>
+infinity scarves<br>
 which <br>
 even if you<br>
 unraveled<br>
@@ -117,8 +126,7 @@ i want to dye<br>
 it mint green <br>
 I want my life<br>
 to be<br>
-so <br>
-g od d amn<br>
+so g od d amn<br>
 ce rul ean<br>
 your eyes burn when you look at me<br>
 so aquamarine <br>
