--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ it radiates and permeates and hesitates <br>
 from center consule it operates<br>
 surveilling everything i do<br>
 do you also suffer from this thing?<br>
-yeah i do he said<br>
+yeah he said<br>
+i do he said<br>
 i know the glowing green orb in my head he said<br>
 so then i was like<br>
 can i ask you a favor? <br>
@@ -29,7 +30,7 @@ i need you to take my life<br>
 and dye it mint green<br>
 like Bethany Mota’s blood<br>
 overly saccharine and soft<br>
-like cotton candy<br>
+cloying cotton candy<br>
 hey guys! <br>
 welcome back to my channel<br>
 today we’re going to be doing something a l i t t le diff e re n t<br>
@@ -124,23 +125,23 @@ now<br>
 and t h e n<br>
 i want to dye<br>
 it mint green <br>
-I want my life<br>
+I want existance<br>
 to be<br>
-so g od d amn<br>
+so goddamn<br>
 ce rul ean<br>
 your eyes burn when you look at me<br>
-so aquamarine <br>
-i turn ill<br>
 seafoam <br>
 froths forth from <br>
-my lips<br>
+your lips<br>
 with delight<br>
-none of its real<br>
-all i know is<br>
+and all i know is <br>
+so aquamarine <br>
 teal            ocean 	sky <br>
 gapes open<br>
 	<div></div>
  fall through<br>
+	 fall through<br>
+	 fall through<br>
 	<div></div>
   </p>
 	</center>
