--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 <center>
 	
-  <h1>twentyfourteen</h1>  <p>
-one time this guy asked me<br>
+  <h1>twentyfourteen</h1>  <div></div>
+
+<p>one time this guy asked me<br>
 what's the first year you remember? <br> 
 and i was like there's<br>
 a flourescent ball of blue light that predates memory <br>
@@ -30,23 +31,22 @@ i need you to take my life<br>
 and dye it mint green<br>
 like Bethany Mota’s blood<br>
 overly saccharine and soft<br>
-cloying cotton candy<br>
+cloying like cotton candy<br>
 hey guys! <br>
 welcome back to my channel<br>
 today we’re going to be doing something a l i t t le diff e re n t<br>
 her voice fades into ukulele stock music<br>
-it gets caught in the riptide<br>
+caught in the riptide<br>
 fly me to the brilliant<br>
 Azure Sky<br>
 where two clouds<br>
 hover indefinitely<br>
 i never actually read The Fault In Our Stars to completion<br>
-but the cover art <br>
-	alone<br>
-lost me<br>
-in a terminal dream of Ansel Elgort<br>
-	      nsterdam and prepubescent<br>
-	      gnst<br>
+but the cover art alone<br>
+launched me into a terminal dream of An<br>
+sel Elgort<br>
+nsterdam and prepubescent<br>
+gnst<br>
 okay?<br>
 okay.<br>
 I've been a bad girl<br>
@@ -60,12 +60,13 @@ buy three <br>
 get three <br>
 free <br>
 deal <br>
-
+I roam around that store for decades<br>
+unscrewing bottles and aniffing things<br>
 are you ready to check out?<br>
 You never know how good <br>
 oh wow
 oh no
-its really bad isn't it?
+its really bad isn't it?<br>
 		
 		yeah...
 
@@ -78,7 +79,9 @@ mouth wash<br>
 pistachio ice cream<br>
 
 
-
+do you remember when things went viral?<br>
+before things went viral<br>
+	
 tumblr,<br>
 have you heard of it?<br>
 			oh, you haven’t?<br>
@@ -113,7 +116,9 @@ still<br>
 on vine<br>
 D.I.Y. this and<br>
 that<br>
-
+I think we're the last ones who remember a time before the big blue ball in our brains
+what do you mean?
+we don't remember before it, we just know it exists
 infinity scarves<br>
 which <br>
 even if you<br>
@@ -123,6 +128,8 @@ the distance<br>
 betw e e n<br>
 now<br>
 and t h e n<br>
+this aquamarine queen
+her rain is over
 i want to dye<br>
 it mint green <br>
 I want existance<br>
@@ -135,13 +142,12 @@ froths forth from <br>
 your lips<br>
 with delight<br>
 and all i know is <br>
-so aquamarine <br>
 teal            ocean 	sky <br>
 gapes open<br>
 	<div></div>
  fall through<br>
-	 fall through<br>
-	 fall through<br>
+fall through<br>
+fall through<br>
 	<div></div>
   </p>
 	</center>
