--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 <body>
 <center>
-	
-  <h1>twentyfourteen</h1>  <div></div>
-
+  <h1>twenty fourteen</h1>  <div></div>
 <p>one time this guy asked me<br>
 what's the first year you remember? <br> 
 and i was like there's<br>
@@ -61,16 +59,20 @@ get three <br>
 free <br>
 deal <br>
 I roam around that store for decades<br>
-unscrewing bottles and aniffing things<br>
+unscrewing bottles and sniffing their contents<br>
+it was like a mueseam for the nose<br>
 are you ready to check out?<br>
-You never know how good <br>
-oh wow
-oh no
+I'd never be ready<br>
+I could spend eternity in that store<br>
+oh wow<br>
+oh no<br>
+oh fuck<br>
 its really bad isn't it?<br>
 		
-		yeah...
+		yeah...<br>
 
-the twittersphere
+the twittersphere<br>
+is also blue<br>
 		
 listerine<br>
 mouth wash<br>
@@ -78,9 +80,9 @@ mouth wash<br>
 
 pistachio ice cream<br>
 
-
 do you remember when things went viral?<br>
 before things went viral<br>
+do you remeber when every youtuber was still on vine?<br>
 	
 tumblr,<br>
 have you heard of it?<br>
@@ -106,7 +108,8 @@ are       	 the future ?<br>
 
 skate in
 skirts<br>
-
+you know its crazy he said<br>
+I think we're the last ones who remember 
 asphyxiate me<br>
 with a choker necklace
 white converse<br>
