--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a flourescent ball of blue light that predates memory <br>
 it radiates and permeates and hesitates <br>
 from center consule it operates<br>
 surveilling everything i do<br>
-do you also suffer from this thing?<br>
+do you also know this thing? i asked<br>
 yeah he said<br>
 i do he said<br>
 i know the glowing green orb in my head he said<br>
@@ -34,11 +34,10 @@ hey guys! <br>
 welcome back to my channel<br>
 today we’re going to be doing something a l i t t le diff e re n t<br>
 her voice fades into ukulele stock music<br>
-caught in the riptide<br>
-fly me to the brilliant<br>
-Azure Sky<br>
-where two clouds<br>
-hover indefinitely<br>
+does it stick to your hands or get caught in the riptide?<br>
+fly me to the brilliant Azure Sky<br>
+where two clouds hover<br>
+indefinitely<br>
 i never actually read The Fault In Our Stars to completion<br>
 but the cover art alone<br>
 launched me into a terminal dream of An<br>
@@ -68,8 +67,10 @@ oh wow<br>
 oh no<br>
 oh fuck<br>
 its really bad isn't it?<br>
-		
-		yeah...<br>
+yeah...<br>
+
+what was the fault in our stars?<br>
+since when was celebrity uncool?
 
 the twittersphere<br>
 is also blue<br>
@@ -77,11 +78,13 @@ is also blue<br>
 listerine<br>
 mouth wash<br>
 
+that this thing isn't going anywhere?
 
 pistachio ice cream<br>
 
-do you remember when things went viral?<br>
-before things went viral<br>
+do you remember when things went viral,<br>
+before things went viral?<br>
+when everyone knew about it
 do you remeber when every youtuber was still on vine?<br>
 	
 tumblr,<br>
@@ -105,38 +108,36 @@ are       	 the future ?<br>
 		That’s the thing now.<br>
 <br><br>
 			didn’t you hear Malala’s speech??<br>
-
 skate in
 skirts<br>
-you know its crazy he said<br>
-I think we're the last ones who remember 
+you know its scary to think he said<br>
+that we're the last ones who remember a time before the big blue ball enveloped everything<br>
+but we don't, i said, it came before us, it predates memory<br>
+but at least we know its exists and <br>
+at one point there was a reality outside it<br>
+cranium
 asphyxiate me<br>
-with a choker necklace
-white converse<br>
+with a rainbow choker necklace<br>
+trample me<br>
+with white converse<br>
 when every youtuber<br>
 was<br>
 still<br>
 on vine<br>
 D.I.Y. this and<br>
 that<br>
-I think we're the last ones who remember a time before the big blue ball in our brains
-what do you mean?
-we don't remember before it, we just know it exists
-infinity scarves<br>
-which <br>
-even if you<br>
-unraveled<br>
-couldn’t span<br>
-the distance<br>
-betw e e n<br>
-now<br>
-and t h e n<br>
-this aquamarine queen
-her rain is over
+the big blue ball in our brains<br>
+even if you unraveled every infinity scarf<br>
+they still couldn’t span the distance<br>
+betw e e n now and t h e n<br>
+the aquamarine queen's rain is over<br>
+when will you get over it?<br>
+when will you move on?<br>
+when will you grow up?<br>
 i want to dye<br>
 it mint green <br>
 I want existance<br>
-to be<br>
+to feel<br>
 so goddamn<br>
 ce rul ean<br>
 your eyes burn when you look at me<br>
@@ -147,8 +148,7 @@ with delight<br>
 and all i know is <br>
 teal            ocean 	sky <br>
 gapes open<br>
-	<div></div>
- fall through<br>
+fall through<br>
 fall through<br>
 fall through<br>
 	<div></div>
