--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a flourescent ball of blue light that predates memory <br>
 it radiates and permeates and hesitates <br>
 from center consule it operates<br>
 surveilling everything i do<br>
-do you also know this thing? i asked<br>
+do you also have this thing? i asked<br>
 yeah he said<br>
 i do he said<br>
 i know the glowing green orb in my head he said<br>
@@ -46,19 +46,22 @@ nsterdam and prepubescent<br>
 gnst<br>
 okay?<br>
 okay.<br>
+what ever happened to john green?<br>
+what ever happened to mint green?<br>
+it was never just a color<br>
+it signified something<br>
 I've been a bad girl<br>
 why don't you wash my mouth out<br>
 with Bath and Body Works soap<br>
 Here, if you buy three <br>
-and <br>
-I buy three <br>
+and I buy three <br>
 we can use the<br>
 buy three <br>
 get three <br>
 free <br>
 deal <br>
 I roam around that store for decades<br>
-unscrewing bottles and sniffing their contents<br>
+frantically pacing, unscrewing bottles, and sniffing their contents<br>
 it was like a mueseam for the nose<br>
 are you ready to check out?<br>
 I'd never be ready<br>
@@ -75,81 +78,81 @@ since when was celebrity uncool?
 the twittersphere<br>
 is also blue<br>
 		
-listerine<br>
-mouth wash<br>
+the listerine scene <br>
+squeeky clean
+quarantine
 
 that this thing isn't going anywhere?
 
 pistachio ice cream<br>
 
 do you remember when things went viral,<br>
-before things went viral?<br>
-when everyone knew about it
-do you remeber when every youtuber was still on vine?<br>
-	
-tumblr,<br>
-have you heard of it?<br>
-			oh, you haven’t?<br>
-	better start designing your<br>
-	blog page<br>
-#  	9	8	F	F	9	8<br>
-		and accidentally<br>
+before things were viral?<br>
+when everyone knew about whatever thing it was<br>
+do you remember when every youtuber was still on vine?<br>
+have you heard of tumblr?
+start designing your blog
+and accidentally<br>
 (learn<br>
-			to <br>
-						code)<br>
+to <br>
+code)<br>
 YOU<br>
 yes, you!!! <br>
 You need <br>
 to learn to code! 1 !	1 !<br>
 	go to code.org to participate in this year’s<br>
 	hour 		of 		code<br>
-Haven’t you heard that 		Women  	    in STEM <br>
-are       	 the future ?<br>
-		That’s the thing now.<br>
-<br><br>
-			didn’t you hear Malala’s speech??<br>
+Haven’t you heard that women in STEM are the future?
+That’s the thing now.<br>
+That's whats going to save us<br>
+girls online<br>
+didn’t you hear Malala’s speech??<br>
 skate in
 skirts<br>
+	
 you know its scary to think he said<br>
 that we're the last ones who remember a time before the big blue ball enveloped everything<br>
-but we don't, i said, it came before us, it predates memory<br>
-but at least we know its exists and <br>
+but we don't, i said, it came before us<br>
+yeah but at least we know its exists and <br>
 at one point there was a reality outside it<br>
-cranium
+in our cranium since birth
+	
+	
 asphyxiate me<br>
-with a rainbow choker necklace<br>
+with rainbow choker necklaces<br>
+when i gasp for air<br>
+put those pods in your ears<br>
+to drown out my begging<br>
+with hyperpobcast<br>
 trample me<br>
 with white converse<br>
-when every youtuber<br>
-was<br>
-still<br>
-on vine<br>
-D.I.Y. this and<br>
-that<br>
 the big blue ball in our brains<br>
+is so beautiful and bright<br>
+tears well when i look at it<br>
+its just so bright<br>
+and light<br>
+and #FFFFervescent
 even if you unraveled every infinity scarf<br>
 they still couldn’t span the distance<br>
-betw e e n now and t h e n<br>
-the aquamarine queen's rain is over<br>
+between now and then<br>
+	
+when white converse turn red<br>
+the aquamarine queen is dead<br>
+her rain is over<br>
 when will you get over it?<br>
 when will you move on?<br>
 when will you grow up?<br>
+stop saying<br>
 i want to dye<br>
 it mint green <br>
-I want existance<br>
-to feel<br>
+I want to feel<br>
 so goddamn<br>
 ce rul ean<br>
 your eyes burn when you look at me<br>
 seafoam <br>
 froths forth from <br>
-your lips<br>
-with delight<br>
-and all i know is <br>
-teal            ocean 	sky <br>
-gapes open<br>
-fall through<br>
-fall through<br>
+your lips with delight<br>
+sky gapes open<br>
 fall through<br>
 	<div></div>
   </p>
