--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ what ever happened to john green?<br>
 what ever happened to mint green?<br>
 it was never just a color<br>
 it signified something<br>
+squeeky clean<br>
+quaranteen<br>
 I've been a bad girl<br>
 why don't you wash my mouth out<br>
 with Bath and Body Works soap<br>
@@ -74,7 +76,10 @@ yeah...<br>
 
 what was the fault in our stars?<br>
 since when was celebrity uncool?
-
+	
+i'll try my very best
+i'll try my very best
+i'll try my very best
 the twittersphere<br>
 is also blue<br>
 		
@@ -83,8 +88,6 @@ squeeky clean
 quarantine
 
 that this thing isn't going anywhere?
-
-pistachio ice cream<br>
 
 do you remember when things went viral,<br>
 before things were viral?<br>
@@ -111,31 +114,37 @@ skate in
 skirts<br>
 	
 you know its scary to think he said<br>
-that we're the last ones who remember a time before the big blue ball enveloped everything<br>
-but we don't, i said, it came before us<br>
-yeah but at least we know its exists and <br>
+that we're the youngest ones who remember a time before the big blue ball enveloped everything<br>
+but we don't remember, i said, it came before us<br>
+yeah but we know its exists and <br>
 at one point there was a reality outside it<br>
+the ones who came after us exist within the blue ball<br>
 in our cranium since birth
 	
-	
+jiggle physics	
 asphyxiate me<br>
 with rainbow choker necklaces<br>
 when i gasp for air<br>
 put those pods in your ears<br>
 to drown out my begging<br>
-with hyperpobcast<br>
+in hyperpobcast<br>
+hello?
+helooooo???
 trample me<br>
 with white converse<br>
+	
 the big blue ball in our brains<br>
 is so beautiful and bright<br>
 tears well when i look at it<br>
 its just so bright<br>
 and light<br>
-and #FFFFervescent
-even if you unraveled every infinity scarf<br>
-they still couldn’t span the distance<br>
-between now and then<br>
+and #FFFFervescent<br>
 	
+even if you unraveled every infinity scarf<br>
+their yarn couldn’t span the distance<br>
+between now and then<br>
+the tranformation was imperceptible<br>
+I didn't know what hope was until it disapeered
 when white converse turn red<br>
 the aquamarine queen is dead<br>
 her rain is over<br>
@@ -145,14 +154,15 @@ when will you grow up?<br>
 stop saying<br>
 i want to dye<br>
 it mint green <br>
-I want to feel<br>
+i want to feel<br>
 so goddamn<br>
 ce rul ean<br>
 your eyes burn when you look at me<br>
-seafoam <br>
-froths forth from <br>
+seafoam froths forth from <br>
 your lips with delight<br>
-sky gapes open<br>
+when the sky gapes open<br>
+fall through<br>
+fall through<br>
 fall through<br>
 	<div></div>
   </p>
