--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@ yeah but we know its exists and <br>
 at one point there was a reality outside it<br>
 the ones who came after us exist within the blue ball<br>
 in our cranium since birth
+does that make us responsible?
+responsible for what?
+for telling them about the big blue ball?
 	
 jiggle physics	
 asphyxiate me<br>
