--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@ when will you grow up?<br>
 stop saying<br>
 i want to dye<br>
 it mint green <br>
-i want to feel<br>
+i want to be<br>
 so goddamn<br>
 ce rul ean<br>
-your eyes burn when you look at me<br>
+it burns if you stare too long<br>
 seafoam froths forth from <br>
 your lips with delight<br>
 when the sky gapes open<br>
