--- a/index.html
+++ b/index.html
@@ -170,4 +170,8 @@ fall through<br>
 	<div></div>
   </p>
 	</center>
-</body>
+<footer>
+  <p>Author: Hege Refsnes</p>
+  <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+</footer>
+	</body>
