--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ fall through<br>
   </p>
 	</center>
 <footer>
-  <p>Author: Hege Refsnes</p>
-  <p><a href="mailto:hege@example.com">hege@example.com</a></p>
+  <p>by k80</p>
+  <p><a href="k80@uchicago.edu">dear god say something</a></p>
 </footer>
 	</body>
