--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ put those pods in your ears<br>
 to drown out my begging<br>
 in hyperpobcast<br>
 hello?
-helooooo???
+helooooo???<br>
 trample me<br>
 with white converse<br>
 	
@@ -172,6 +172,6 @@ fall through<br>
 	</center>
 <footer>
   <p>by k80</p>
-  <p><a href="k80@uchicago.edu">dear god say something</a></p>
+  <p><a href="mailto:k80@uchicago.edu">dear god say something</a></p>
 </footer>
 	</body>
