--- a/index.html
+++ b/index.html
@@ -193,6 +193,6 @@ fall through<br>
 	</center>
 <footer>
   <p>by k80</p>
-  <p><a href="mailto:k80@uchicago.edu">dear god say something</a></p>
+  <p><a href="mailto:k80@uchicago.edu">umm</a></p>
 </footer>
 	</body>
