--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 <center>
-  <h1>twenty fourteen</h1>  <div></div>
+  <h1>twenty fourteen</h1> <br>
 <p>one time this guy asked me<br>
 what's the first year you remember? <br> 
 and i was like there's<br>
 a flourescent ball of blue light that predates memory <br>
 it radiates and permeates and hesitates <br>
 from center consule it operates<br>
-surveilling everything i do<br>
-do you also have this thing? i asked<br>
+surveilling every single thing i do<br>
+do you know her? i asked<br>
 yeah he said<br>
 i do he said<br>
 i know the glowing green orb in my head he said<br>
@@ -115,14 +115,13 @@ skirts<br>
 	
 you know its scary to think he said<br>
 that we're the youngest ones who remember a time before the big blue ball enveloped everything<br>
-but we don't remember, i said, it came before us<br>
-yeah but we know its exists and <br>
+but we don't remember, i said<br>
+yeah but we know its exists and we know<br>
 at one point there was a reality outside it<br>
-the ones who came after us exist within the blue ball<br>
-in our cranium since birth
-does that make us responsible?
-responsible for what?
-for telling them about the big blue ball?
+the ones who came after us know only of the blue ball<br>
+does that make us responsible?<br>
+responsible for what?<br>
+for telling them about the big blue ball?<br>
 	
 jiggle physics	
 asphyxiate me<br>
@@ -133,6 +132,7 @@ to drown out my begging<br>
 in hyperpobcast<br>
 hello?
 helooooo???<br>
+	
 trample me<br>
 with white converse<br>
 	
@@ -162,15 +162,18 @@ so goddamn<br>
 ce rul ean<br>
 it burns if you stare too long<br>
 seafoam froths forth from <br>
-your lips with delight<br>
+lips with delight<br>
 when the sky gapes open<br>
 fall through<br>
 fall through<br>
 fall through<br>
+	please darling<br>
 	fall through<br>
+	why don't you?<br>
 fall through<br>
 fall through<br>
 	fall through<br>
+	why don't you just?<br>
 fall through<br>
 fall through<br>
 	fall through<br>
