--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
 <center>
-  <h1>twenty fourteen</h1> <br>
+  <h1>twenty fourteen</h1> 
 <p>one time this guy asked me<br>
-what's the first year you remember? <br> 
+what's the first year you remember?<br> 
 and i was like there's<br>
-a flourescent ball of blue light that predates memory <br>
-it radiates and permeates and hesitates <br>
+a flourescent ball of blue light that predates memory<br>
+it radiates and permeates and hesitates<br>
 from center consule it operates<br>
-surveilling every single thing i do<br>
-do you know her? i asked<br>
+surveilling all i do<br>
+do you know her?<br>
 yeah he said<br>
 i do he said<br>
-i know the glowing green orb in my head he said<br>
+i know the glowing green orb inside my skull he said<br>
 so then i was like<br>
 can i ask you a favor? <br>
-he said sure<br>
+and he said sure<br>
 i need you to take my life<br>
 and dye it mint green<br>
 like Bethany Mota’s blood<br>
@@ -35,6 +35,8 @@ welcome back to my channel<br>
 today we’re going to be doing something a l i t t le diff e re n t<br>
 her voice fades into ukulele stock music<br>
 does it stick to your hands or get caught in the riptide?<br>
+lately i've been so lonely<br>
+
 fly me to the brilliant Azure Sky<br>
 where two clouds hover<br>
 indefinitely<br>
@@ -123,14 +125,14 @@ does that make us responsible?<br>
 responsible for what?<br>
 for telling them about the big blue ball?<br>
 	
-jiggle physics	
 asphyxiate me<br>
 with rainbow choker necklaces<br>
 when i gasp for air<br>
 put those pods in your ears<br>
 to drown out my begging<br>
-in hyperpobcast<br>
-hello?
+with hyperpop<br>
+or the latest fringe politcal podcast<br>
+hello?<br>
 helooooo???<br>
 	
 trample me<br>
@@ -144,7 +146,7 @@ and light<br>
 and #FFFFervescent<br>
 	
 even if you unraveled every infinity scarf<br>
-their yarn couldn’t span the distance<br>
+their yarn couldn’t span the cognitive distance<br>
 between now and then<br>
 the tranformation was imperceptible<br>
 I didn't know what hope was until it disapeered
