--- a/index.html
+++ b/index.html
@@ -76,14 +76,10 @@ oh fuck<br>
 its really bad isn't it?<br>
 yeah...<br>
 
-what was the fault in our stars?<br>
-since when was celebrity uncool?
 	
 i'll try my very best
 i'll try my very best
 i'll try my very best
-the twittersphere<br>
-is also blue<br>
 		
 the listerine scene <br>
 squeeky clean
@@ -91,12 +87,12 @@ quarantine
 
 that this thing isn't going anywhere?
 
-do you remember when things went viral,<br>
+do you remember when things went viral<br>
 before things were viral?<br>
 when everyone knew about whatever thing it was<br>
 do you remember when every youtuber was still on vine?<br>
-have you heard of tumblr?
-start designing your blog
+are you on tumblr?<br>
+start designing your blog<br>
 and accidentally<br>
 (learn<br>
 to <br>
@@ -131,7 +127,6 @@ when i gasp for air<br>
 put those pods in your ears<br>
 to drown out my begging<br>
 with hyperpop<br>
-or the latest fringe politcal podcast<br>
 hello?<br>
 helooooo???<br>
 	
@@ -139,7 +134,11 @@ trample me<br>
 with white converse<br>
 	
 the big blue ball in our brains<br>
-is so beautiful and bright<br>
+it's just so<br>
+beautiful and bright<br>
+inflated with infinite possibilities<br>
+i want to touch it<br>
+
 tears well when i look at it<br>
 its just so bright<br>
 and light<br>
@@ -148,8 +147,6 @@ and #FFFFervescent<br>
 even if you unraveled every infinity scarf<br>
 their yarn couldn’t span the cognitive distance<br>
 between now and then<br>
-the tranformation was imperceptible<br>
-I didn't know what hope was until it disapeered
 when white converse turn red<br>
 the aquamarine queen is dead<br>
 her rain is over<br>
@@ -171,9 +168,12 @@ fall through<br>
 fall through<br>
 	please darling<br>
 	fall through<br>
+	fall through<br>
 	why don't you?<br>
 fall through<br>
 fall through<br>
+	fall through<br>
+	fall through<br>
 	fall through<br>
 	why don't you just?<br>
 fall through<br>
@@ -193,11 +193,24 @@ fall through<br>
 	fall through<br>
 fall through<br>
 fall through<br>
+	fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>fall through<br>
+fall through<br>
 	<div></div>
   </p>
 	</center>
+	</body>
+
 <footer>
   <p>by k80</p>
   <p><a href="mailto:k80@uchicago.edu">umm</a></p>
 </footer>
-	</body>
